# grpc_internal_communication

./: .gitignore  Makefile  README.md  client.py  main.py  pyproject.toml  scrape.py  scraper.py
database/: connector.py
database/Models/: __init__.py  actor.py  category.py  film.py
database/Models/asociations/: actor_film.py  category_film.py
database/queries/: __init__.py  actor_queries.py  category_queries.py  film_queries.py
protos/: scraper_pb2.py  scraper_pb2_grpc.py
scraper/: dto.py  scraper_base.py  tmdb_scraper.py  utils.py
server/: __init__.py
server/database/models/: __init__.py  actor.py  category.py  director.py  film.py
server/database/models/asociations/: actor_film.py  category_film.py  director_film.py
server/database/queries/: __init__.py  actor_queries.py  category_queries.py  director_queries.py  film_queries.py
server/protos/: scraper.proto  scraper_pb2.py  scraper_pb2_grpc.py
server/scraper/: dto.py  scraper_base.py  tmdb_scraper.py
