[tool.poetry]
name = "grpc-internal-communication"
version = "0.1.0"
description = ""
authors = ["Oliver Bielik <oliverbielik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
grpcio = "^1.73.1"
grpcio-tools = "^1.73.1"
selenium = "^4.34.0"
sqlalchemy = "^2.0.41"
psycopg2 = "^2.9.10"
black = "^25.1.0"
isort = "^6.0.1"
pyclean = "^3.1.0"
requests = "^2.32.4"
pydantic = "^2.11.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
